calculator-app/src/App.css
:root {
  --fg-primary: #ffffff;
  --fg-btn-1: #444e5f;
  --fg-btn-2: #ffffff;
  --fg-btn-3: #ffffff;
  --bg-primary: #3b4664;
  --bg-secondary: #252d44;
  --bg-screen: #181f32;
  --bg-btn-1: #eae3db;
  --bg-btn-2: #647299;
  --bg-btn-3: #d13f30;
  --bg-btn-1-active: #ffffff;
  --bg-btn-2-active: #a2b3e1;
  --bg-btn-3-active: #f96c5b;
  --shadow-btn-1: #b1a295;
  --shadow-btn-2: #414e72;
  --shadow-btn-3: #96271c;
}
[data-theme="light"] {
  --fg-primary: #000000;
  --fg-btn-1: #000000;
  --fg-btn-2: #ffffff;
  --fg-btn-3: #ffffff;
  --bg-primary: hsl(0, 0%, 90%);
  --bg-secondary: hsl(0, 5%, 81%);
  --bg-screen: hsl(0, 0%, 93%);
  --bg-btn-1: hsl(45, 7%, 89%);
  --bg-btn-2: hsl(185, 42%, 37%);
  --bg-btn-3: hsl(25, 98%, 40%);
  --bg-btn-1-active: #ffffff;
  --bg-btn-2-active: #62b5bd;
  --bg-btn-3-active: #ff8b38;
  --shadow-btn-1: hsl(35, 11%, 61%);
  --shadow-btn-2: hsl(185, 58%, 25%);
  --shadow-btn-3: hsl(25, 99%, 27%);
}
[data-theme="night"] {
  --fg-primary: hsl(52, 100%, 62%);
  --fg-btn-1: hsl(52, 100%, 62%);
  --fg-btn-2: hsl(0, 0%, 100%);
  --fg-btn-3: hsl(198, 20%, 13%);
  --bg-primary: hsl(268, 75%, 9%);
  --bg-secondary: hsl(268, 71%, 12%);
  --bg-screen: #1e0836;
  --bg-btn-1: hsl(268, 47%, 21%);
  --bg-btn-2: #331b4d;
  --bg-btn-3: hsl(176, 100%, 44%);
  --bg-btn-1-active: #6b34ac;
  --bg-btn-2-active: #8731b0;
  --bg-btn-3-active: #94fff9;
  --shadow-btn-1: hsl(290, 70%, 36%);
  --shadow-btn-2: hsl(285, 91%, 52%);
  --shadow-btn-3: hsl(177, 92%, 70%);
}

.container {
  display: grid;
  place-content: center;
  min-height: 100vh;
  background-color: var(--bg-primary);
  transition: 0.3s ease-in-out;
}
.app {
  font-family: "League Spartan", sans-serif;
  font-weight: 700;
  display: flex;
  flex-direction: column;
  padding: 24px;
  gap: 24px;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  color: var(--fg-primary);
}
.brand {
  font-weight: bold;
  font-size: 2rem;
}
.toggle-theme {
  display: flex;
  gap: 1rem;
  align-items: flex-end;
  font-size: .8rem;
  font-weight: bold;
}
.theme-labels {
  display: flex;
  justify-content: space-around;
}
.toggler {
  display: flex;
  flex-direction: column;
}
.toggle-switch {
  display: flex;
  gap: 0.33rem;
  position: relative;
  padding: .25rem;
  background-color: var(--bg-secondary);
  border-radius: 1rem;
}
.theme-switch {
  width: 1rem;
  height: 1rem;
  opacity: 0;
  appearance: none;
  background-color: var(--bg-btn-3);
  border-radius: 100%;
  transition: 0.2s ease-out;
}
.theme-switch:checked {
  opacity: 1;
}
.theme-switch:checked:hover, .theme-switch:checked:active {
  background-color: var(--bg-btn-3-active);
}
.screen {
  color: var(--fg-primary);
  background-color: var(--bg-screen);
  font-size: 3rem;
  font-weight: bold;
  text-align: right;
  padding: 24px;
  border-radius: 8px;
  min-height: 120px;
  overflow-x: auto;
}

.keypad {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(5, 1fr);
  gap: 12px;
  background-color: var(--bg-secondary);
  padding: 24px;
  border-radius: 8px;
}

.btn-1, .btn-2, .btn-3 {
  padding: 16px;
  text-align: center;
  border: 0;
  border-radius: 6px;
  border-bottom-width: 3.5px;
  border-bottom-style: solid;
  font-weight: bold;
}

.btn-1 {
  color: var(--fg-btn-1);
  background-color: var(--bg-btn-1);
  font-size: 2rem;
  line-height: 2rem;
  border-bottom-color: var(--shadow-btn-1);
}
.btn-1:hover, .btn-1:active {
  background-color: var(--bg-btn-1-active);
}

.btn-2 {
  color: var(--fg-btn-2);
  background-color: var(--bg-btn-2);
  font-size: 1.5rem;
  border-bottom-color: var(--shadow-btn-2);
}
.btn-2:hover, .btn-2:active {
  background-color: var(--bg-btn-2-active);
}


.btn-3 {
  color: var(--fg-btn-3);
  background-color: var(--bg-btn-3);
  font-size: 1.5rem;
  border-bottom-color: var(--shadow-btn-3);
}
.btn-3:hover, .btn-3:active {
  background-color: var(--bg-btn-3-active);
}


#reset {
  grid-column: 1 / 3;
  grid-row: -2;
}

#equal {
  grid-column: 3 / -1;
  grid-row: -2;
}

